Fix routes and swagger description
