# routes/users.js
@@ -1,8 +1,6 @@
 const { Router } = require('express');
 const {
-  getUsers,
   getUser,
-  createUser,
   updateUser,
   deleteUser,
 } = require('../controllers/users');
@@ -10,7 +8,6 @@ const {
 const router = Router();
 
 router.get('/:id', getUser);
-router.post('/', createUser);
 router.put('/:id', updateUser);
 router.delete('/:id', deleteUser);
 
